# GammaRay

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.9c59ddb  CMakeSettings.json  Main.qml  Readme.md  TCButton.qml  TCGameListView.qml  TCTabView.qml  app_config.h.in  certificate.csr  config.cmake  env_settings.cmake  icon.rc.in  install.py  main.cpp  pub_rel-debug.bat  pub_release.bat  res.qrc  test.qml  version.cmake  version_config.h.in
src/: CMakeLists.txt  app_colors.cpp  app_colors.h  app_messages.h  application.cpp  application.h  context.cpp  context.h  gr_application.cpp  gr_application.h  gr_context.cpp  gr_context.h  gr_render_controller.cpp  gr_render_controller.h  gr_resources.cpp  gr_resources.h  gr_run_game_manager.cpp  gr_run_game_manager.h  gr_server_manager.cpp  gr_server_manager.h  gr_settings.cpp  gr_settings.h  gr_statistics.cpp  gr_statistics.h  gr_system_monitor.cpp  gr_system_monitor.h  gr_workspace.cpp  gr_workspace.h  settings.cpp  settings.h  system_monitor.cpp  system_monitor.h  workspace.cpp  workspace.h
src/app/: tc_app_manager.cpp  tc_app_manager.h
src/client/: CMakeLists.txt  app_message.h  application.cpp  audio_player.cpp  client_context.cpp  clipboard_manager.cpp  ct_app_message.h  ct_application.cpp  ct_application.h  ct_audio_player.cpp  ct_audio_player.h  ct_base_workspace.cpp  ct_base_workspace.h  ct_client_context.cpp  ct_client_context.h  ct_clipboard_manager.cpp  ct_const_def.h  ct_director.cpp  ct_game_overlay.cpp  ct_game_overlay.h  ct_game_view.cpp  ct_game_view.h  ct_main.cpp  ct_main_progress.cpp  ct_main_progress.h  ct_main_ws.cpp  ct_opengl_api.h  ct_opengl_image_reader.cpp  ct_opengl_video_widget.cpp  ct_opengl_video_widget.h  ct_qt_key_converter.cpp  ct_renderer.cpp  ct_rtc_manager.cpp  ct_rtc_manager.h  ct_sdl_video_widget.cpp  ct_sdl_video_widget.h  ct_settings.cpp  ct_settings.h  ct_shader_program.cpp  ct_sprite.cpp  (+30 more)
src/crash_reporter/: CMakeLists.txt  crash_reporter_main.cpp
src/db/: db_game.cpp  db_game.h  db_game_manager.cpp  db_game_manager.h  game.cpp  game.h  game_manager.cpp  game_manager.h
src/entity/: game.cpp  game.h
src/hw_info/: CMakeLists.txt  hw_cpu_detail_item.cpp  hw_cpu_detail_item.h  hw_cpu_detail_widget.cpp  hw_cpu_detail_widget.h  hw_gpu_widget.cpp  hw_gpu_widget.h  hw_info.h  hw_info_parser.cpp  hw_info_parser.h  hw_info_widget.cpp  hw_info_widget.h  hw_stat_chart.cpp  hw_stat_chart.h
src/manager/: gr_server_manager.cpp  gr_server_manager.h  run_game_manager.cpp  run_game_manager.h  tc_app_info.h  tc_app_manager.cpp  tc_app_manager.h
src/model/: game_model.cpp  game_model.h
src/network/: CMakeLists.txt  apis.h  app_server.cpp  app_server.h  gr_service_client.cpp  http_handler.cpp  http_handler.h  http_server.cpp  http_server.cpp~  http_server.h  ip_util.cpp  personal_data.h  session.cpp  session.h  udp_broadcaster.cpp  udp_broadcaster.h  ws_server.cpp  ws_server.h
src/plugin_interface/: CMakeLists.txt  gr_data_provider_plugin.cpp  gr_data_provider_plugin.h  gr_encoder_plugin.cpp  gr_encoder_plugin.h  gr_frame_processor_plugin.cpp  gr_monitor_capture_plugin.cpp  gr_monitor_capture_plugin.h  gr_net_plugin.cpp  gr_net_plugin.h  gr_plugin_context.h  gr_plugin_events.h  gr_plugin_interface.cpp  gr_plugin_interface.h  gr_stream_plugin.cpp  gr_stream_plugin.h
src/qrcode/: qr_generator.cpp  qr_generator.h
src/render/: CMakeLists.txt  app.cpp  app.h  app_global_messages.h  context.cpp  context.h  rd_app.cpp  rd_app.h  rd_context.cpp  rd_context.h  rd_icon.rc.in  rd_main.cpp  rd_statistics.cpp  rd_statistics.h  render_main.cpp  settings.toml
src/render_panel/: CMakeLists.txt  gr_account_error.h  gr_account_manager.cpp  gr_account_manager.h  gr_app_messages.h  gr_application.cpp  gr_application.h  gr_connected_manager.cpp  gr_connected_manager.h  gr_context.cpp  gr_context.h  gr_guard_starter.cpp  gr_guard_starter.h  gr_render_controller.cpp  gr_render_controller.h  gr_render_msg_processor.cpp  gr_render_msg_processor.h  gr_run_game_manager.cpp  gr_run_game_manager.h  gr_running_pipe.cpp  gr_running_pipe.h  gr_settings.cpp  gr_settings.h  gr_statistics.cpp  gr_statistics.h  gr_system_monitor.cpp  gr_system_monitor.h  gr_workspace.cpp  gr_workspace.h
src/res/: resource_manager.cpp  resource_manager.h
src/server/: CMakeLists.txt  app.cpp  app.h  app_global_messages.h  certificate.pem  context.cpp  context.h  main.cpp  private.key  server_monitor.cpp  server_monitor.h  settings.toml  srv_main.cpp  statistics.cpp  statistics.h  system_monitor.cpp  system_monitor.h
src/service/: CMakeLists.txt  render_manager.cpp  render_manager.h  render_process.h  service.cpp  service.h  service_context.cpp  service_context.h  service_main.cpp  service_main.h  service_manager.cpp  service_manager.h  service_manager_main.cpp  service_messages.h  service_msg_server.cpp  service_msg_server.h
src/skin/: CMakeLists.txt  skin_config.toml  skin_loader.cpp  skin_loader.h
src/steam/: steam_api.h  steam_manager.cpp  steam_manager.h
src/tests/: CMakeLists.txt  test_db.cpp  test_http_client.cpp  test_process.cpp  test_resolutions.cpp
src/theme/: QmlStyleUrlInterceptor.cpp  QtAdvancedStylesheet.cpp  QtAdvancedStylesheet.h
src/transfer/: file_transfer.cpp  file_transfer.h
src/ui/: add_game_panel.cpp  add_game_panel.h  effect_widget.h  game_info_preview.cpp  game_info_preview.h  qt_circle.cpp  qt_circle.h  qt_vertical.cpp  qt_vertical.h  rn_app.cpp  rn_app.h  rn_empty.cpp  rn_empty.h  st_about_me.cpp  st_about_me.h  st_client.cpp  st_client.h  st_encoder.cpp  st_encoder.h  st_general.cpp  st_general.h  st_input.cpp  st_input.h  st_media.cpp  st_media.h  st_network.cpp  st_network.h  stat_chart.cpp  stat_chart.h  tab_base.cpp  tab_base.h  tab_game.cpp  tab_game.h  tab_server.cpp  tab_server.h  tab_settings.cpp  tab_settings.h  widget_decorator.cpp  widget_decorator.h
src/uninstall/: CMakeLists.txt  shadow_deleter.cpp  uninstall_main.cpp
src/util/: audio_filter.h  dxgi_mon_detector.cpp  dxgi_mon_detector.h  qt_directory.cpp  qt_directory.h
src/widgets/: app_skin.cpp  app_skin.h  cover_widget.h  (+11 more)
(+1037 files in other folders)
